--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,23 @@
+aioconsole==0.1.15
+aiodns==2.0.0
 aiohttp==3.6.2
 aiohttp-cors==0.7.0
+aiomonitor==0.4.5
+aredis==1.1.7
 async-timeout==3.0.1
 attrs==19.3.0
+cchardet==2.1.5
+certifi==2019.11.28
+cffi==1.13.2
 chardet==3.0.4
+ciso8601==2.1.2
 Click==7.0
 colorclass==2.2.0
 colorlog==4.1.0
 croniter==0.3.31
+Cython==0.29.14
+datadog==0.33.0
+decorator==4.4.1
 fastavro==0.22.9
 faust==1.10.0
 faust-avro==0.3.2
@@ -17,12 +28,20 @@ mode==4.1.9
 multidict==4.7.4
 mypy-extensions==0.4.3
 opentracing==1.3.0
+orjson==2.1.4
 ply==3.11
+pycares==3.1.1
+pycparser==2.19
 python-dateutil==2.8.1
+python-rocksdb==0.7.0
+requests==2.22.0
 robinhood-aiokafka==1.1.3
+setproctitle==1.1.10
 six==1.14.0
 terminaltables==3.1.0
 typing-extensions==3.7.4.1
 typing-inspect==0.5.0
+urllib3==1.25.7
+uvloop==0.14.0
 venusian==1.2.0
 yarl==1.4.2
